--- a/thi/sanpham17.html
+++ b/thi/sanpham17.html
@@ -10,51 +10,80 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham17.png" alt="Cốm">
-        <div class="product-info">
-            <h2>Cốm Lacto Biomin Gold hỗ trợ cải thiện hệ vi khuẩn đường ruột (20 gói)</h2>
-            <p>Giá: <span class="product-price">108.000đ / Hộp</span></p>
-            <p>Danh mục: Vi sinh - Probiotic</p>
-            <p>Dạng bào chế: Cốm</p>
-            <p>Quy cách: Hộp 20 gói</p>
-            <p>Xuất xứ thương hiệu: Việt Nam</p>
-            <p>Nhà sản xuất: HD PHARMA</p>
-            <p>Nước sản xuất: Việt Nam</p>
-            <p>Thành phần: lactobacilus acidophilus, Bacillus subtilis, Bifidobacterium, Streptococcus thermophilus, Canxi gluconat, L-Lysine hydrochloride, Betaglucan, Sữa non, Thymomodulin, Vitamin B3, Tá dược vừa đủ, Orafti GR</p>
-            <p>Hỗ trợ: Khó tiêu, Tiêu chảy, Suy dinh dưỡng, Rối loạn tiêu hóa, Táo bón, Đi ngoài phân sống, Biếng ăn, Kém hấp thu, Đầy hơi</p>
-            <p>Mô tả ngắn: Cốm vi sinh Lacto Biomin Gold giúp bổ sung vi khuẩn có ích, vitamin và lysin cho cơ thể, hỗ trợ tăng cường tiêu hóa. Giúp ăn ngon và nâng cao khả năng hấp thu dưỡng chất, nâng cao sức đề kháng. Hỗ trợ cải thiện hệ vi sinh đường ruột và giúp giảm nguy cơ rối loạn tiêu hóa do loạn khuẩn đường ruột.</p>
-            <p>Số đăng ký: 12654/2020/ÐKSP</p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
+        <div class="product-detail">
+            <img src="IMG/sanpham17.png" alt="Cốm">
+            <div class="product-info">
+                <h2>Cốm Lacto Biomin Gold hỗ trợ cải thiện hệ vi khuẩn đường ruột (20 gói)</h2>
+                <p>Giá: <span class="product-price">108.000đ / Hộp</span></p>
+                <p>Danh mục: Vi sinh - Probiotic</p>
+                <p>Dạng bào chế: Cốm</p>
+                <p>Quy cách: Hộp 20 gói</p>
+                <p>Xuất xứ thương hiệu: Việt Nam</p>
+                <p>Nhà sản xuất: HD PHARMA</p>
+                <p>Nước sản xuất: Việt Nam</p>
+                <p>Thành phần: lactobacilus acidophilus, Bacillus subtilis, Bifidobacterium, Streptococcus thermophilus, Canxi gluconat, L-Lysine hydrochloride, Betaglucan, Sữa non, Thymomodulin, Vitamin B3, Tá dược vừa đủ, Orafti GR</p>
+                <p>Hỗ trợ: Khó tiêu, Tiêu chảy, Suy dinh dưỡng, Rối loạn tiêu hóa, Táo bón, Đi ngoài phân sống, Biếng ăn, Kém hấp thu, Đầy hơi</p>
+                <p>Mô tả ngắn: Cốm vi sinh Lacto Biomin Gold giúp bổ sung vi khuẩn có ích, vitamin và lysin cho cơ thể, hỗ trợ tăng cường tiêu hóa. Giúp ăn ngon và nâng cao khả năng hấp thu dưỡng chất, nâng cao sức đề kháng. Hỗ trợ cải thiện hệ vi sinh đường ruột và giúp giảm nguy cơ rối loạn tiêu hóa do loạn khuẩn đường ruột.</p>
+                <p>Số đăng ký: 12654/2020/ÐKSP</p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
         </div>
-    </div>
-
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham8.html"><img src="IMG/sanpham8.png" alt="Product 8"></a>
+                    <p class="product-name">Dung dịch LineaBon K2+D3 ErgoPharm</p>
+                    <p class="product-price">295.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham9.html"><img src="IMG/sanpham9.png" alt="Product 9"></a>
+                    <p class="product-name">Nước Hồng Sâm Cô Đặc Hongsamjin Everystick EX</p>
+                    <p class="product-price">1.200.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham10.html"><img src="IMG/sanpham10.png" alt="Product 10"></a>
+                    <p class="product-name">Thực phẩm bảo vệ sức khỏe NMN PQQ</p>
+                    <p class="product-price">6.675.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham15.html"><img src="IMG/sanpham15.png" alt="Product 14"></a>
+                    <p class="product-name">Viên uống LéAna Ocavill</p>
+                    <p class="product-price">540.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham7.html"><img src="IMG/sanpham7.png" alt="Product 7"></a>
+                    <p class="product-name">Viên nén Orihiro Glucosamine 900</p>
+                    <p class="product-price">575.000đ / Hộp</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
         </div>
 </body>
 </html>
