--- a/thi/sanpham18.html
+++ b/thi/sanpham18.html
@@ -10,53 +10,82 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham18.png" alt="Thuốc">
-        <div class="product-info">
-            <h2>Thuốc Crestor 20mg AstraZeneca điều trị tăng cholesterol máu nguyên phát (2 vỉ x 14 viên)</h2>
-            <p>Giá: <span class="product-price">160.000đ / Hộp</span></p>
-            <p>Danh mục:  Thuốc trị mỡ máu</p>
-            <p>Dạng bào chế: Viên nén bao phim</p>
-            <p>Quy cách: Hộp 2 Vỉ x 14 Viên</p>
-            <p>Xuất xứ thương hiệu: Anh</p>
-            <p>Nhà sản xuất: IPR Pharmaceuticals Inc.</p>
-            <p>Nước sản xuất: USA</p>
-            <p>Thành phần: Rosuvastatin</p>
-            <p>Đối tượng sử dụng: Người cao tuổi, Trẻ em, Người lớn</p>
-            <p>Thuốc cần kê toa: Có</p>
-            <p>Mô tả ngắn: Crestor 20 mg dùng để điều trị tăng cholesterol máu nguyên hoặc rối loạn lipid máu hỗn hợp. Là một liệu pháp hỗ trợ cho chế độ ăn kiêng khi bệnh nhân không đáp ứng đầy đủ với chế độ ăn kiêng và các liệu pháp không dùng thuốc khác.</p>
-            <p>Số đăng ký: VN-18151-14</p>
-            <p>Lưu ý: Sản phẩm này chỉ bán khi có chỉ định của bác sĩ, mọi thông tin trên Website chỉ mang tính chất tham khảo.</p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
+        <div class="product-detail">
+            <img src="IMG/sanpham18.png" alt="Thuốc">
+            <div class="product-info">
+                <h2>Thuốc Crestor 20mg AstraZeneca điều trị tăng cholesterol máu nguyên phát (2 vỉ x 14 viên)</h2>
+                <p>Giá: <span class="product-price">160.000đ / Hộp</span></p>
+                <p>Danh mục:  Thuốc trị mỡ máu</p>
+                <p>Dạng bào chế: Viên nén bao phim</p>
+                <p>Quy cách: Hộp 2 Vỉ x 14 Viên</p>
+                <p>Xuất xứ thương hiệu: Anh</p>
+                <p>Nhà sản xuất: IPR Pharmaceuticals Inc.</p>
+                <p>Nước sản xuất: USA</p>
+                <p>Thành phần: Rosuvastatin</p>
+                <p>Đối tượng sử dụng: Người cao tuổi, Trẻ em, Người lớn</p>
+                <p>Thuốc cần kê toa: Có</p>
+                <p>Mô tả ngắn: Crestor 20 mg dùng để điều trị tăng cholesterol máu nguyên hoặc rối loạn lipid máu hỗn hợp. Là một liệu pháp hỗ trợ cho chế độ ăn kiêng khi bệnh nhân không đáp ứng đầy đủ với chế độ ăn kiêng và các liệu pháp không dùng thuốc khác.</p>
+                <p>Số đăng ký: VN-18151-14</p>
+                <p>Lưu ý: Sản phẩm này chỉ bán khi có chỉ định của bác sĩ, mọi thông tin trên Website chỉ mang tính chất tham khảo.</p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
         </div>
-    </div>
-
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản Phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham2.html"><img src="IMG/sanpham2.png" alt="Product 2"></a>
+                    <p class="product-name">Nước súc miệng Pearlie White Fluorinze</p>
+                    <p class="product-price">132.000đ / Chai</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham3.html"><img src="IMG/sanpham3.png" alt="Product 3"></a>
+                    <p class="product-name">Siro Bổ Phế Lábebé</p>
+                    <p class="product-price">60.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                <a href="sanpham1.html"><img src="IMG/sanpham1.png" alt="Product 1"></a>
+                <p class="product-name">Men vi sinh Enterogermina Gut Defense Sanofi</p>
+                <p class="product-price">157.000đ / Hộp</p>
+            </div>
+                <div class="product-itemp">
+                    <a href="sanpham5.html"><img src="IMG/sanpham5.png" alt="Product 5"></a>
+                    <p class="product-name">Thuốc Telfor 60 DHG</p>
+                    <p class="product-price">1.300đ / Viên</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham6.html"><img src="IMG/sanpham6.png" alt="Product 6"></a>
+                    <p class="product-name">Bột Hapacol 150 DHG</p>
+                    <p class="product-price">34.800đ / Hộp</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
         </div>
 </body>
 </html>
